                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 2.1.6

  *) Changed the defaults to deal with read contention on the cache, this
   dramatically improves the performance on cache misses [TS-505, TS-506].

  *) Reorganize some code to reduce binary foot prints [TS-655].

  *) Bogus logcat conversion of squid timestamps [TS-653].

  *) Unable to purge objects on other servers in full cluster mode [TS-643].

  *) New 64-bit random generator.

  *) Rename the management APIs from INK* to TS* [TS-639].

  *) Remove the dead v2 stats code [TS-650].

  *) Dynamic libraries for mgmt APIs [TS-649].
    
    This makes libts -> libtsutil, and we now support making .so's for
    libtsutil.so and libtsmgmt.so. All binaries are changed to use this,
    except traffic_server which continues to use the libtsutil.a library
    (for performance on e.g. 32-bit platforms).
    
    This also renames the public API include file to be
    
         #include <ts/mgmtapi.h>


  *) Move Layout out of iocore and into lib/ts [TS-647].

  *) Rename various directories:
      proxy/mgmt -> mgmt/
      proxy/mgmt/cop -> cop/

   All "cli" APIs are now also migrated into mgmt/cli, unified into one
   single cli. [TS-638]

  *) Cleanup of Web2/HTML2 [TS-641].

  *) Remove various unused source files [TS-636, TS-637].

  *) Rename proxy/http2 -> proxy/http and proxy/mgmt2 to proxy/mgmt [TS-631].

  *) Add an example to records.config for how to bind a specific IP [TS-582].

  *) Cluster port was activated even with clustering disabled. This fix also
   adds monitoring support for the "cli" unix domain socket [TS-491].

  *) Cleanup of inktomi.com [TS-593].

  *) Cleaning up some old TCL files and dependencies [TS-324].

  *) Remove traces of FTP references [TS-324] by purging the now useless TCL
  bindings to it.

  *) Fix configure issues for sqlite3. This fix eliminates all of SimpleDBM,