@@ -49,7 +49,7 @@ Cache::scan(Continuation * cont, char *hostname, int host_len, int KB_per_second
   SET_CONTINUATION_HANDLER(c, &CacheVC::scanPart);
   eventProcessor.schedule_in(c, HRTIME_MSECONDS(c->scan_msec_delay));
   cont->handleEvent(CACHE_EVENT_SCAN, c);
-  return ACTION_RESULT_DONE;
+  return &c->_action;
 }
 
 int
